Fixed org card spacing

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -61,10 +61,10 @@ table {
 
 .flip-card {
   background-color: transparent;
-  width: 300px;
+  width: auto;
   height: 300px;
   border-radius: 25px;
-  perspective: 1000px; /* Remove this if you don't want the 3D effect */
+  perspective: 1000px;
 }
 
 /* This container is needed to position the front and back side */
